--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,11 @@
-/* styles go here */
+.fieldset {
+  margin-bottom: 20px;
+}
+
+.fieldElem {
+  margin-bottom: 10px;
+}
+
+.lastElem {
+  margin-bottom: 0;
+}
